# hello-triangle

./: CMakeLists.txt  README.md  fs  glad.c  main.cpp
include/glad/: glad.h
